base layout finished

--- a/index.html
+++ b/index.html
@@ -3,8 +3,71 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+            <div></div>
+            <div></div>
+            <div></div>
+        </header>
+        <div class="divSpacing">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="block3">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="block4">
+            <div>
 
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <div class="block5">
+            <div>
+
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <div class="block6">
+            <div>
+                <div></div>
+            </div>
+            <div>
+                <div></div>
+            </div>
+        </div>
+        <div class="block7">
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <div class="blockFooter">
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
     </body>
 </html>
