--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+        <header class="tempBorder">
             <div></div>
             <div></div>
             <div></div>
         </header>
-        <div class="divSpacing">
+        <div class="block2 tempBorder">
             <div></div>
             <div></div>
             <div></div>
         </div>
-        <div class="block3">
+        <div class="block3 tempBorder">
             <div></div>
             <div></div>
             <div></div>
         </div>
-        <div class="block4">
+        <div class="block4 tempBorder">
             <div>
 
             </div>
@@ -36,7 +36,7 @@
 
             </div>
         </div>
-        <div class="block5">
+        <div class="block5 tempBorder">
             <div>
 
             </div>
@@ -49,7 +49,7 @@
                 <div></div>
             </div>
         </div>
-        <div class="block6">
+        <div class="block6 tempBorder">
             <div>
                 <div></div>
             </div>
@@ -57,13 +57,13 @@
                 <div></div>
             </div>
         </div>
-        <div class="block7">
+        <div class="block7 tempBorder">
             <div>
                 <div></div>
                 <div></div>
             </div>
         </div>
-        <div class="blockFooter">
+        <div class="blockFooter tempBorder">
             <div>
                 <div></div>
                 <div></div>
