backgrounds added to divs and removed temp borders

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </div>
         </div>
         <div class="block6 tempBorder">
-            <div>
+            <div class="leftSection sections6 tempBorder">
                 <div></div>
             </div>
-            <div>
+            <div class="rightSection sections6 tempBorder">
                 <div></div>
             </div>
         </div>
